Issue #130 fix: css alignment

--- a/app/styles/content-editor.css
+++ b/app/styles/content-editor.css
@@ -289,5 +289,11 @@ body {
     border-right: 1px solid #ccc !important;
 }
 
-.download-collaborator-icon{padding:6px; margin-left: 148px;}
-.download-collaborator-icon .download.link.icon{line-height: 26px;}
+.download-collaborator-icon {
+    padding: 6px;
+    margin-left: 148px;
+}
+
+.download-collaborator-icon .download.link.icon {
+    line-height: 26px;
+}
